--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -65,6 +65,6 @@ nav a:link, nav a:visited {
 }
 
 nav a:hover {
-    columns: var(--nav-hover-link-color);
+    color: var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
 }
