--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,16 +8,46 @@
 nav {
     background-color: steelblue;
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+
 }
 
 h1 {
     color: steelblue;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
+    max-width: 840px;
+    align-content: center;
+    align-items: center;
+}
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+    align-items: center;
+    align-content: center;
+}
+
+aside {
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    
 }
 
 img {
@@ -88,4 +118,9 @@ aside h2 {
     top: 47px;
     left: 150px;
 
+}
+
+header, footer {
+    max-width: 840px;
+    margin: 0 auto;
 }
