--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -24,7 +24,32 @@
 
 }
 
+header {
+    background-color: #f8f8f8; 
+    padding: 20px;
+    display: flex;
+    align-items: center; 
+    font-family: var(--heading-font);
+}
 
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+    width: 100%;
+}
+
+.logo {
+    max-width: 100px; 
+}
+
+nav a {
+    margin-left: 20px; 
+    text-decoration: none;
+    color: #333; 
+    font-weight: bold;
+}
 
 body {
     font-family: var(--parragraph-font);
@@ -38,33 +63,26 @@ h1,h2,h3,h4,h5,h6 {
 
 }
 
-header {
-    padding: 20px;
-    background-color: var(--accent1-color);
+
+
+footer {
+    background-color:var(--accent1-color);
+    color: #fff;
+    padding: 10px;
+    font-family: var(--parragraph-font);
 }
 
-p {
-    padding: 25px;
-}
-
-nav {
-    background-color: var(--nav-background-color);
-    font-size: 1.2rem;
+.sociallinks {
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-nav a {
-    display: block;
-    color: var(--nav-link-color);
-    text-decoration: none;
-    padding: 1rem;
+.sociallinks img {
+    max-width: 30px;
+    align-items: flex-end;
 }
 
-nav a:link, nav a:visited {
-    color: var(--nav-hover-link-color);
-}
-
-nav a:hover {
-    color: var(--nav-hover-link-color);
-    background-color: var(--nav-hover-background-color);
+.sociallinks p {
+    align-content: center;
 }
