--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -32,6 +32,10 @@
         text-align: center;
     }
 
+    h1 {
+        font-family: var(--heading-font);
+        font-weight: bold;
+    }
     header {
         background-color: #f8f8f8; 
         padding: 20px;
